# CL_Signatures

./: .gitignore  CMakeLists.txt  README.md  params.h  test_anonymous_credentials.c  test_cl_signatures.c  test_scheme_A.c  test_scheme_B.c  test_zkPoK.c
commitment_schemes/PoK_message/: CMakeLists.txt  PoK_message.c  PoK_message.h
commitment_schemes/PoK_signature/: PoK_signature.c  PoK_signature.h
pairings_test/: pairings_test.c  pairings_test.h
scheme_A/: schemeA_signatures.c  schemeA_signatures.h
scheme_B/: schemeB_signatures.c  schemeB_signatures.h
scheme_C/: schemeC_signatures.c  schemeC_signatures.h
scheme_D/: schemeD_signatures.c  schemeD_signatures.h
sign_commitment/: CMakeLists.txt  sign_commitment.c  sign_commitment.h
signature_on_committed_value/: commitment_scheme.c  commitment_scheme.h  sign_commitment.c  sign_commitment.h  signature_PoK.c  signature_PoK.h
signatures/schemeA/: CMakeLists.txt  schemeA.c  schemeA.h
signatures/schemeB/: CMakeLists.txt  schemeB.c  schemeB.h
signatures/schemeC/: CMakeLists.txt  schemeC.c  schemeC.h
signatures/schemeD/: CMakeLists.txt  schemeD.c  schemeD.h
utils/: CMakeLists.txt  utils.c  utils.h
zkPoK/: zkPoK.c  zkPoK.h
